[package]
name = "cskk"
version = "0.6.0"
authors = ["Naoaki Iwakiri <naokiri@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2018"
readme = "README.md"
description = "C ABIから使う事を目的とした SKK(Simple Kana Kanji henkan)方式のかな漢字変換ライブラリ"
repository = "https://github.com/naokiri/cskk"
categories = ["internationalization", "text-processing"]

[lib]
crate-type = ["cdylib", "lib"]

[features]
capi = []

[dependencies]
log = "^0.4.17"
xkbcommon = "^0.4.0"
bitflags = "1.0.4"
enum-display-derive = "^0.1.0"
serde = "^1.0"
serde_derive = "^1.0"
sequence_trie = { version = "^0.3.6", features = ["serde"] }
encoding_rs = "0.8"
encoding_rs_io = "0.1"
toml = "^0.5.9"
thiserror = "^1.0"
regex = "^1.5"
lazy_static = "1.4"
xdg = { version = "^2.4" }
anyhow = { version = "^1.0.62" }

[dev-dependencies]
env_logger = "0.8"

[package.metadata.capi]
min_version = "0.9.6"

[package.metadata.capi.header]
name = "libcskk"
generation = true

[package.metadata.capi.pkg_config]
name = "libcskk"
description = "SKK (Simple Kana Kanji) henkan library"

[package.metadata.capi.install.data]
subdirectory = "libcskk"
asset = [{ from = "assets/**/*" }]
