[workspace]
members = [
    "cskk",
    "lru_ordered_map",
]

[workspace.package]
version = "3.2.0"
edition = "2018"
license = "GPL-3.0-or-later"
authors = ["Naoaki Iwakiri <naokiri@gmail.com>"]
repository = "https://github.com/naokiri/cskk"
rust-version = "1.72"

[profile.release]
strip = "debuginfo"